test/files/neg/t5830.check
t5830.scala:6: error: unreachable code
    case 'a' => println("b") // unreachable
                       ^
one error found
